
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_PACKET ;
 int ETH_P_ARP ;
 int EXIT_FAILURE ;
 int KMALLOC_PAD ;
 int SOCK_DGRAM ;
 int dprintf (char*) ;
 int exit (int ) ;
 int htons (int ) ;
 int socket (int ,int ,int ) ;

void pad_kmalloc(void)
{
    int x;
    for (x = 0; x < KMALLOC_PAD; x++)
        if (socket(AF_PACKET, SOCK_DGRAM, htons(ETH_P_ARP)) == -1) {
            dprintf("[-] pad_kmalloc() socket error\n");
            exit(EXIT_FAILURE);
        }
}
